광석노드 자동텍스쳐 시스템 완료 및 잡다한 경고 제거 todo:과열시스템, 코어 및 모듈 로직 완전 안정화